Fixed rows having overlapping elements.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -322,3 +322,7 @@ div .linkedindiv {
 }
 
 
+
+.row {
+    clear:both;
+}
